WICKETPIXIE CHANGELOG

v1.2 - TBA, 2009 (RC1 - August 3, 2009)
 * FEATURE: AdSense for Search functionality.
 * PERFORMANCE: New AdminPage class written from scratch in hopes of better
 admin pages overall.
 * PERFORMANCE: Switched back to using WordPress' database functions for
 storing settings.
 * PERFORMANCE: Using the SimplePie library included with WordPress.
 * PERFORMANCE: Updated widgets to use WordPress 2.8's new Widget API.
 * PERFORMANCE: Sped up page loads by moving JavaScript files down to the footer
 and adding a PHP flush() call in the header to get content out sooner.
 * ADDED: TweetMeme widget on posts is now toggleable.
 * ADDED: The number of Flickr photos displayed in the Flickr badge is now
 selectable in WicketPixie Admin.
 * PLUGIN: Updated StatPress Reloaded to 1.5.21.
 * REMOVED: TweetMeme widget on the home page.
 * REMOVED: Some of the defaults Chris wanted in WicketPixie.
 
v1.1.3 - June 18, 2009
 * ADDED: Added the option to toggle the AJAX loader on and off.
 * ADDED: Recent comments and tag cloud are in the home page sidebar now.
 * ADDED: Added ability to set maximum image width in post contents via the
 Theme Options page.
 * FIXED: Added wmode attribute to Ustream widget to make it look nice
 during page loads.
 * FIXED: Fixed JavaScript bug in IE.
 * FIXED: WicketPixie is now much more XHTML 1.0 Strict compliant AND
 CSS 3.0 compliant.
 * FIXED: AdSense is now off by default.
 * FIXED: Updated Ustream widgets to use latest code from Ustream.

v1.1.2 - May 21, 2009
 * ADDED: AJAX loader to keep users from looking at a half-loaded page.
 * FIXED: Some bugs in the Adsense code.
 * FIXED: Broken admin pages made it impossible to save any settings.

v1.1.1 - April 19, 2009
 * FIXED: Temporary beautification of the theme during page loads.
 
v1.1 - April 18, 2009
 * FEATURE: Global Announcements allow you to set a message that is displayed
 globally across your site.